--- a/.cct_config.json
+++ b/.cct_config.json
@@ -1,41 +1,79 @@
 {
   "ignore_list": [
     ".git",
-    "node_modules",
+    ".idea",
     ".vscode",
-    "dist",
-    "build",
     ".DS_Store",
-    "__pycache__",
-    "*.pyc",
-    "*.egg-info",
-    "venv",
-    ".venv",
-    "target",
+    "*.log",
+    "repomix-output.xml",
+    "node_modules",
+    "build",
+    "dist",
+    "out",
+    ".next",
+    ".nuxt",
+    ".vite",
+    ".parcel-cache",
+    "coverage",
     "package-lock.json",
     "yarn.lock",
-    "poetry.lock",
-    "repomix-output.xml",
-    "*.log",
-   
-
-    "src/generated/prisma",
-
-   
+    "pnpm-lock.yaml",
+    "bun.lockb",
+    "__pycache__",
+    "venv",
+    ".venv",
+    "*.pyc",
+    "*.egg-info",
+    "build/",
+    "dist/",
     "*.so",
+    "vendor",
+    "composer.lock",
+    "storage",
+    "bootstrap/cache",
+    "public/build",
+    "public/hot",
+    "var",
+    "phpunit.result.cache",
+    "src/generated/prisma",
+    "**/generated/**",
+    "*.db",
+    "*.sqlite",
+    "*.sqlite3",
+    "dump.sql",
+    "local.db",
+    "target",
+    "*.class",
+    "*.jar",
+    "*.war",
+    "*.ear",
+    "*.bin",
+    ".env",
+    ".env.*",
+    "!.env.example",
+    ".terraform",
+    ".terraform.lock.hcl",
+    ".serverless",
+    ".vercel",
     "*.so.node",
     "*.dll",
     "*.exe",
-    "*.bin",
     "*.img",
     "*.iso",
     "*.png",
     "*.jpg",
     "*.jpeg",
     "*.gif",
+    "*.bmp",
+    "*.tiff",
     "*.svg",
     "*.ico",
     "*.woff",
-    "*.woff2"
+    "*.woff2",
+    "*.ttf",
+    "*.eot",
+    "*.pdf",
+    "*.zip",
+    "*.tar.gz"
   ]
 }
