--- a/.cct_config.json
+++ b/.cct_config.json
@@ -1,4 +1,5 @@
 {
+  "qdrant_url": "http://localhost:6333",
   "ignore_list": [
     ".git",
     ".idea",
@@ -20,6 +21,7 @@
     "pnpm-lock.yaml",
     "bun.lockb",
     "__pycache__",
+    "**__pycache__**",
     "venv",
     ".venv",
     "*.pyc",
